Bug 183037 - Lyrics Applet not reading KDE theme well
Summary: Lyrics Applet not reading KDE theme well
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Context View (other bugs)
Version First Reported In: 2.0.1
Platform: Ubuntu Unspecified
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-03 19:14 UTC by Georgie Mathews
Modified: 2011-10-03 12:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Georgie Mathews 2009-02-03 19:14:47 UTC
Version:           2.0.1 (using KDE 4.1.3)
Installed from:    Ubuntu Packages

The lyrics applet does not get the theme from KDE itself resulting in a white border around it which does not look too good on darker KDE colour schemes. Here is a screenshot when I ran a darker colour scheme :

http://img502.imageshack.us/my.php?image=screenkm5.png
Comment 1 Mark Kretschmann 2009-02-03 19:29:50 UTC
Looks like a bug to me, so I'm reclassifying from wishlist to bug.
Comment 2 piemonkey 2009-02-09 02:19:42 UTC
I get this too. I also get a white border around album covers (which can kind of be seen in the screenshot given by the reporter), which is less intrusive, but I don't think should really be there.
Comment 3 Mark Kretschmann 2009-03-04 11:01:13 UTC
SVN commit 934949 by markey:

Fix issues with dark (inverted) KDE color schemes colliding with the
Lyrics Applet's theme.

For some sick reason the solution is simply _not_ to paint our custom
SVG frame file. After removing it, Plasma does the "right" thing
automatically.

BUG: 183037

 M  +8 -18     LyricsApplet.cpp  
 M  +1 -3      LyricsApplet.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=934949
Comment 4 Christophe Marin 2011-10-03 12:17:52 UTC
*** Bug 283239 has been marked as a duplicate of this bug. ***