Fix issues with dark (inverted) KDE color schemes colliding with the Lyrics Applet's theme.

For some sick reason the solution is simply _not_ to paint our custom
SVG frame file. After removing it, Plasma does the "right" thing
automatically.

BUG: 183037

svn path=/trunk/extragear/multimedia/amarok/; revision=934949